22.12.2000	More TTXView work <garetxe@users.sourceforge.net>

	* src/ttxview.c: More GUI love, should be ready to start merging
	history and other fancy stuff. Tried to minimize used screen
	space, support for subpages, and a very improved Keyb handling.

20.12.2000	TTXView, T thread <garetxe@users.sourceforge.net>

	* src/ttxview.c: All the difficult things are done by now, lacks
	history.
	* src/zvbi.c: Created T thread as discussed, loads of old code
	need to be removed now.
	* src/tvengxv.c (tvengxv_get_tune): Fixed(?) a bug, the pointer
	was apparently wrongly passed. This could be a memleak, needs
	further investigation, i just fixed the sympthoms.

17.12.2000	TTXView started <garetxe@users.sourceforge.net>

	* src/ttxview.c: Started, will be the GUI for the TTX decoder.

16.12.2000	Configurable default charset <garetxe@users.sourceforge.net>

	* glade/zapping.glade, libvbi/vbi.c: Added the
	option to set the default charset.

16.12.2000	Teletext character sets <mschimek@users.sourceforge.net>

	* /libvbi: Zapping now supports all Teletext character sets.

16.12.2000	MC fifos <garetxe@users.sourceforge.net>

	* common/fifo.[ch]: Converted to multi-consumers. Lacks some
	things yet.

6.12.2000	XV bugfixes, remote.c <garetxe@users.sourceforge.net>

	* src/remote.[ch]: Created, allows running some internal Zapping
	functions from inside the plugins.
	* All: Fixed a number of bugs with the XVideo support, thanks to
	all the people that helped with them.
	
2.12.2000	Multi-controller controls <garetxe@users.sourceforge.net>

	* src/tveng.c: Filter and Colorkey controls are now managed by the
	"mother" controller.
	* src/tveng.h: Mother controller added, COLOR control type added,
	controllers now know who do they belong to.
	* src/v4linterface.c: Added GUI item for COLOR controls, cleanup.
	* src/tvengxv.c: removed filter control, now managed by the mother
	controller.

30.11.2000	Bug fixes <garetxe@users.sourceforge.net>
