@@ -942,7 +942,6 @@ tvengxv_get_tune(__u32 * freq, tveng_device_info *info)
 {
   struct private_tvengxv_device_info * p_info =
     (struct private_tvengxv_device_info*)info;
-  int returned_freq;
 
   t_assert(info != NULL);
   if (!freq || p_info->freq == None)
@@ -951,9 +950,9 @@ tvengxv_get_tune(__u32 * freq, tveng_device_info *info)
   XvGetPortAttribute(info->private->display,
 		     p_info->port,
 		     p_info->freq,
-		     (&returned_freq));
+		     (int*)(freq));
 
-  *freq = returned_freq / 0.016;
+  *freq = *freq / 0.016;
 
   return 0;
 }
